--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 							</div>
 							
 							<div>
-								<v-btn class="button d-block mt-9" tile color="#3B4549" @click="sideDrawerPageChange('research');" dark><img class="landing--buttons_image mr-2" src="icons/appbar_flower.svg" alt="flower"> Search Wildflowers</v-btn>
-								<v-btn class="button d-block mt-4" tile color="#3B4549" @click="sideDrawerPageChange('searchTrees');" dark><img class="landing--buttons_image mr-2" src="icons/treeLight.svg" alt="flower"> Search Trees</v-btn>
-								<v-btn class="button d-block mt-4" tile color="#3B4549" @click="sideDrawerPageChange('Instructions');" dark><img class="landing--buttons_image mr-2" src="icons/question_mark.svg" alt="flower"> Instructions</v-btn>
+								<v-btn class="button d-block mt-9 pinkText" tile color="#3B4549" @click="sideDrawerPageChange('research');" dark><img class="landing--buttons_image mr-2" src="icons/appbar_flower.svg" alt="flower"> Search Wildflowers</v-btn>
+								<v-btn class="button d-block mt-4 pinkText" tile color="#3B4549" @click="sideDrawerPageChange('searchTrees');" dark><img class="landing--buttons_image mr-2" src="icons/treeLight.svg" alt="flower"> Search Trees</v-btn>
+								<v-btn class="button d-block mt-4 pinkText" tile color="#3B4549" @click="sideDrawerPageChange('Instructions');" dark><img class="landing--buttons_image mr-2" src="icons/question_mark.svg" alt="flower"> Instructions</v-btn>
 							</div>
 						</div>
 					</div>
