--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<meta content="utf-8" http-equiv="encoding">
 		<title>Wildflowers</title>
 		<link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="vuetify.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="manifest" href="manifest.json">
 
@@ -29,12 +28,7 @@
 		<link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/icons/icon_1536x2048.png"/>
 
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-		<script type="module" src="./glossary.json">
-			import glos from './glossary.json'
-			export default {
-				
-			}
-		</script>
+
 	</head>
 	
     <body>
@@ -122,18 +116,18 @@
 							</v-app-bar>
 						</div>
 						<div id="selectionWrapper">
-							<span class="sortBy_tabs" @click="abcSelected" :class="{sortBy_focus: abc_selected}">Search Alphabetically</span><span class="sortBy_tabs" @click="classSelected" :class="{sortBy_focus: class_selected}">Search Classifications</span>
+							<span class="sortBy_tabs" @click="abcSelected" :class="{sortBy_focus: abc_selected}">Search Alphabetically</span><span class="sortBy_tabs" @click="classSelected(); filterFlowers();" :class="{sortBy_focus: class_selected}">Search Classifications</span>
 						</div>
 						<div v-if="abc_selected" class="mt-5">
 							<div class="searchBox mb-3">
-								<img class="ml-2 d-inline" src="icons/magnifying.svg" alt="">
-								<input type="text" class="d-inline" name="search" id="searchBox" color="#3B4549" placeholder="Search">
+								<img class="ml-2 d-inline search" src="icons/magnifying.svg" alt="">
+								<input type="text" class="d-inline" name="search" id="searchBox" color="#3B4549" placeholder="Search" v-model="wildflowerSearch">
 							</div>
 							<div class="aBar"><p class="pl-4">A</p></div>
 
 							<!-- ALL FLOWER IMAGES/SELECTION -->
 							<div class="picWrapper">
-								<div v-for="flower in wildflowers" class="containerPics">
+								<div v-for="flower in filteredWildflowerSearch" class="containerPics">
                                     <img :src="`wildflowerPhotos/${flower.Name}.jpg`" class="pic" @click="flowerDetailPage(`${flower.Name}`); resetAppBarTabs(); currentSlide(1);">
                                     <div class="text-block" v-if="common_selected">{{flower.Common_Name}}</div><div class="text-block latin" v-if="latin_selected">{{flower.Latin_Name}}</div>
                                 </div>
@@ -145,27 +139,27 @@
 							<div class="contentWrapper">
 								<h2>Shape</h2>
 								<div class="gridContainer">
-									<img class="optionImg" src="icons/simple.svg" @click="simpleSelected" :class="{selected_focus: simple_selected}">
-									<img class="optionImg" src="icons/daisy.svg" @click="daisySelected" :class="{selected_focus: daisy_selected}">
-									<img class="optionImg" src="icons/irregular.svg" @click="irregularSelected" :class="{selected_focus: irregular_selected}">
+									<img class="optionImg" src="icons/simple.svg" @click="simpleSelected(); filterFlowers();" :class="{selected_focus: simple_selected}">
+									<img class="optionImg" src="icons/daisy.svg" @click="daisySelected(); filterFlowers();" :class="{selected_focus: daisy_selected}">
+									<img class="optionImg" src="icons/irregular.svg" @click="irregularSelected(); filterFlowers();" :class="{selected_focus: irregular_selected}">
 								</div>
 								<h2>Leaf Arrangement</h2>
 								<div class="gridContainer">
-									<img class="optionImg" src="icons/basal.svg" @click="basalSelected" :class="{selected_focus: basal_selected}">
-									<img class="optionImg" src="icons/opposite.svg" @click="oppositeSelected" :class="{selected_focus: opposite_selected}">
-									<img class="optionImg" src="icons/whorled.svg" @click="whorledSelected" :class="{selected_focus: whorled_selected}">
-									<img class="optionImg" src="icons/alternate.svg" @click="alternateSelected" :class="{selected_focus: alternate_selected}">
+									<img class="optionImg" src="icons/basal.svg" @click="basalSelected(); filterFlowers();" :class="{selected_focus: basal_selected}">
+									<img class="optionImg" src="icons/opposite.svg" @click="oppositeSelected(); filterFlowers();" :class="{selected_focus: opposite_selected}">
+									<img class="optionImg" src="icons/whorled.svg" @click="whorledSelected(); filterFlowers();" :class="{selected_focus: whorled_selected}">
+									<img class="optionImg" src="icons/alternate.svg" @click="alternateSelected(); filterFlowers();" :class="{selected_focus: alternate_selected}">
 								</div>
 								<h2>Color</h2>
 								<div class="gridContainer2">
-									<img class="optionImg" src="icons/blue.svg" @click="blueSelected" :class="{selected_focus: blue_selected}">
-									<img class="optionImg" src="icons/orange.svg" @click="orangeSelected" :class="{selected_focus: orange_selected}">
-									<img class="optionImg" src="icons/pink.svg" @click="pinkSelected" :class="{selected_focus: pink_selected}">
-									<img class="optionImg" src="icons/yellow.svg" @click="yellowSelected" :class="{selected_focus: yellow_selected}">
-									<img class="optionImg" src="icons/red.svg" @click="redSelected" :class="{selected_focus: red_selected}">
-									<img class="optionImg" src="icons/purple.svg" @click="purpleSelected" :class="{selected_focus: purple_selected}">
-									<img class="optionImg" src="icons/white.svg" @click="whiteSelected" :class="{selected_focus: white_selected}">
-									<img class="optionImg" src="icons/all.svg" @click="allSelected" :class="{selected_focus: all_selected}">
+									<img class="optionImg" src="icons/blue.svg" @click="blueSelected(); filterFlowers();" :class="{selected_focus: blue_selected}">
+									<img class="optionImg" src="icons/orange.svg" @click="orangeSelected(); filterFlowers();" :class="{selected_focus: orange_selected}">
+									<img class="optionImg" src="icons/pink.svg" @click="pinkSelected(); filterFlowers();" :class="{selected_focus: pink_selected}">
+									<img class="optionImg" src="icons/yellow.svg" @click="yellowSelected(); filterFlowers();" :class="{selected_focus: yellow_selected}">
+									<img class="optionImg" src="icons/red.svg" @click="redSelected(); filterFlowers();" :class="{selected_focus: red_selected}">
+									<img class="optionImg" src="icons/purple.svg" @click="purpleSelected(); filterFlowers();" :class="{selected_focus: purple_selected}">
+									<img class="optionImg" src="icons/white.svg" @click="whiteSelected(); filterFlowers();" :class="{selected_focus: white_selected}">
+									<img class="optionImg" src="icons/all.svg" @click="allSelected(); filterFlowers();" :class="{selected_focus: all_selected}">
 								</div>
 								<div id="petalWrap" @click="page = 'petals'">
 									<span id="numPetals">Number of Petals</span>
@@ -174,7 +168,7 @@
 								<div id="reset" @click="reset();">Reset Filters</div>
 							</div>
 							<div class="picWrapper">
-								<div v-for="flower in wildflowers" class="containerPics">
+								<div v-for="flower in wildflowersFiltered" class="containerPics">
                                     <img :src="`wildflowerPhotos/${flower.Name}.jpg`" class="pic" @click="flowerDetailPage(`${flower.Name}`); resetAppBarTabs(); currentSlide(1);">
                                     <div class="text-block" v-if="common_selected">{{flower.Common_Name}}</div><div class="text-block latin" v-if="latin_selected">{{flower.Latin_Name}}</div>
                                 </div>
@@ -190,7 +184,7 @@
 							</v-app-bar>
 						</div>
 						<ul id="listWrapper">
-							<li id="listItem" v-for="petalNum in numPetals" style="list-style-type:none" @click="petalNumber = petalNum; page = 'research'">{{petalNum}}</li>
+							<li id="listItem" v-for="petalNum in numPetals" style="list-style-type:none" @click="petalNumber = petalNum; page = 'research'; filterFlowers();">{{petalNum}}</li>
 						</ul>
 						<div id="cancelButton" @click="page = 'research'">Cancel</div>
 					</div>
@@ -244,18 +238,18 @@
 							</v-app-bar>
 						</div>
 						<div id="selectionWrapper">
-							<span class="sortBy_tabs" @click="abcSelected" :class="{sortBy_focus: abc_selected}">Search Alphabetically</span><span class="sortBy_tabs" @click="classSelected" :class="{sortBy_focus: class_selected}">Search Classifications</span>
+							<span class="sortBy_tabs" @click="abcSelected" :class="{sortBy_focus: abc_selected}">Search Alphabetically</span><span class="sortBy_tabs" @click="classSelected(); filterTrees();" :class="{sortBy_focus: class_selected}">Search Classifications</span>
 						</div>
 						<div v-if="abc_selected" class="mt-5">
 							<div class="searchBox mb-3">
 								<img class="ml-2 d-inline" src="icons/magnifying.svg" alt="">
-								<input type="text" class="d-inline" name="search" id="searchBox" color="#3B4549" placeholder="Search">
+								<input type="text" class="d-inline" name="search" id="searchBox" color="#3B4549" placeholder="Search" v-model="treeSearch">
 							</div>
 							<div class="aBar"><p class="pl-4">A</p></div>
 
 							<!-- ALL TREE IMAGES/SELECTION -->
 							<div class="picWrapper">
-                                <div v-for="tree in trees" class="containerPics">
+                                <div v-for="tree in filteredTreeSearch" class="containerPics">
                                     <img :src="`treePhotos/${tree.Name}.jpg`" class="pic" @click="treeDetailPage(`${tree.Name}`); resetAppBarTabs(); currentSlide(1);">
                                     <div class="text-block" v-if="common_selected">{{tree.Common_Name}}</div><div class="text-block latin" v-if="latin_selected">{{tree.Latin_Name}}</div>
                                 </div>
@@ -267,24 +261,29 @@
 							<div class="contentWrapper">
 								<h2>Leaves or Needles</h2>
 								<div class="gridContainer">
-									<img class="optionImg" src="icons/leaves.svg" @click="leavesSelected" :class="{selected_focus: leaves_selected}">
-									<img class="optionImg" src="icons/needles.svg" @click="needlesSelected" :class="{selected_focus: needles_selected}">
+									<img class="optionImg" src="icons/leaves.svg" @click="leavesSelected(); filterTrees();" :class="{selected_focus: leaves_selected}">
+									<img class="optionImg" src="icons/needles.svg" @click="needlesSelected(); filterTrees();" :class="{selected_focus: needles_selected}">
 								</div>
 								<h2>Leaf Shape</h2>
 								<div class="gridContainer">
-									<img class="optionImg" src="icons/palmate.svg" @click="palmateSelected" :class="{selected_focus: palmate_selected}">
-									<img class="optionImg" src="icons/compound.svg" @click="compoundSelected" :class="{selected_focus: compound_selected}">
-									<img class="optionImg" src="icons/oval.svg" @click="ovalSelected" :class="{selected_focus: oval_selected}">
-									<img class="optionImg" src="icons/other.svg" @click="otherSelected" :class="{selected_focus: other_selected}">
+									<img class="optionImg" src="icons/oval.svg" @click="ovalSelected(); filterTrees();" :class="{selected_focus: oval_selected}">
+									<img class="optionImg" src="icons/linear.svg" @click="linearSelected(); filterTrees();" :class="{selected_focus: linear_selected}">
+									<img class="optionImg" src="icons/triangular.svg" @click="triangularSelected(); filterTrees();" :class="{selected_focus: triangular_selected}">
+									<img class="optionImg" src="icons/other.svg" @click="otherSelected(); filterTrees();" :class="{selected_focus: other_selected}">
 								</div>
-								<h2>Color</h2>
+								<h2>Number of Needles in Bundle</h2>
 								<div class="gridContainer">
-									<img class="optionImg" src="icons/one.svg" @click="oneSelected" :class="{selected_focus: one_selected}">
-									<img class="optionImg" src="icons/two.svg" @click="twoSelected" :class="{selected_focus: two_selected}">
-									<img class="optionImg" src="icons/three.svg" @click="threeSelected" :class="{selected_focus: three_selected}">
-									<img class="optionImg" src="icons/four+.svg" @click="fourSelected" :class="{selected_focus: four_selected}">
+									<img class="optionImg" src="icons/one.svg" @click="oneSelected(); filterTrees();" :class="{selected_focus: one_selected}">
+									<img class="optionImg" src="icons/two.svg" @click="twoSelected(); filterTrees();" :class="{selected_focus: two_selected}">
+									<img class="optionImg" src="icons/three.svg" @click="threeSelected(); filterTrees();" :class="{selected_focus: three_selected}">
 								</div>
 								<div id="reset" @click="reset();">Reset Filters</div>
+							</div>
+							<div class="picWrapper">
+								<div v-for="tree in treesFiltered" class="containerPics">
+                                    <img :src="`treePhotos/${tree.Name}.jpg`" class="pic" @click="treeDetailPage(`${tree.Name}`); resetAppBarTabs(); currentSlide(1);">
+                                    <div class="text-block" v-if="common_selected">{{tree.Common_Name}}</div><div class="text-block latin" v-if="latin_selected">{{tree.Latin_Name}}</div>
+                                </div>
 							</div>
 						</div>
 					</div>
